# DeitelCPP

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/ch1/: GuessNumber.cpp
src/ch10/exercises/: ex10_12.cpp  ex10_13.cpp  ex10_14.cpp  ex10_9.cpp
src/ch11/checkpoints/: cp11_2_2.cpp  cp11_2_3.cpp  cp11_4_3.cpp  cp11_5_2.cpp
src/ch11/exercises/: ex11_2.cpp  ex11_3.cpp  ex11_5.cpp
src/ch12/exercises/: ex12_10.cpp  ex12_13.cpp  ex12_14.cpp  ex12_4.cpp  ex12_7.cpp
src/ch13/exercises/: ex13_20.cpp  ex13_21.cpp  ex13_22.cpp  ex13_23.cpp  ex13_24.cpp  ex13_25.cpp  ex13_26.cpp  ex13_27.cpp
src/ch14/exercises/: ex14_10.cpp  ex14_11.cpp  ex14_12.cpp  ex14_13.cpp  ex14_15.cpp  ex14_16.cpp  ex14_3.cpp  ex14_7.cpp  ex14_8.cpp  ex14_9.cpp
src/ch15/exercises/: ex15_15.cpp  ex15_16.cpp  ex15_17.cpp  ex15_18.cpp  ex15_19.cpp  ex15_20.cpp  ex15_21.cpp  ex15_23.cpp
src/ch19/exercises/: ex19_3.cpp  ex19_6.cpp  ex19_7.cpp  ex19_8.cpp  ex19_9.cpp
src/ch2/exercises/: ex2_10.cpp  ex2_11.cpp  ex2_13.cpp  ex2_14.cpp  ex2_15.cpp  ex2_16.cpp  ex2_18.cpp  ex2_21.cpp  ex2_4.cpp
src/ch2/notes/: string_notes.cpp
src/ch3/checkpoints/: cp3_10_3.cpp  cp3_14_2.cpp  cp3_7_2.cpp  cp3_8_3.cpp  cp3_9_3.cpp
src/ch3/exercises/: ex3_10.cpp  ex3_11.cpp  ex3_12.cpp  ex3_16.cpp  ex3_17.cpp  ex3_18.cpp  ex3_19.cpp  ex3_23.cpp  ex3_24.cpp  ex3_3.cpp  ex3_4.cpp  ex3_5.cpp  ex3_6.cpp  ex3_7.cpp  ex3_9.cpp
src/ch3/notes/: boost.cpp
src/ch4/checkpoints/: cp4_4_3.cpp  cp4_5_2.cpp  cp4_6_3.cpp  cp4_7_2.cpp
src/simpletron/: simpletron.cpp  simpletron.h  simpletron_testing.cpp
(+158 files in other folders)
